added role for functional test account